--- a/app/src/main/res/layout/fragment_informations.xml
+++ b/app/src/main/res/layout/fragment_informations.xml
@@ -14,46 +14,52 @@
         app:title="@string/informations"
         app:titleCentered="true" />
 
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/cgFragmentInformations"
-        android:layout_width="wrap_content"
+    <HorizontalScrollView
+        android:id="@+id/horizontalScrollView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mtFragmentInformations"
-        app:selectionRequired="true"
-        app:singleSelection="true">
+        android:scrollbars="none"
+        app:layout_constraintTop_toBottomOf="@+id/mtFragmentInformations">
 
-        <com.google.android.material.chip.Chip
-            style="@style/Widget.Material3.Chip.Suggestion.Elevated"
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/cgFragmentInformations"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="@string/tropical" />
+            android:paddingHorizontal="16dp"
+            app:selectionRequired="true"
+            app:singleLine="true"
+            app:singleSelection="true">
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/cFragmentInformationsDesert"
-            style="@style/Widget.Material3.Chip.Suggestion.Elevated"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/desert" />
+            <com.google.android.material.chip.Chip
+                style="@style/Widget.Material3.Chip.Suggestion.Elevated"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="@string/tropical" />
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/cFragmentInformationsTemperate"
-            style="@style/Widget.Material3.Chip.Suggestion.Elevated"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/temperate" />
+            <com.google.android.material.chip.Chip
+                android:id="@+id/cFragmentInformationsDesert"
+                style="@style/Widget.Material3.Chip.Suggestion.Elevated"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/desert" />
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/cFragmentInformationsWetland"
-            style="@style/Widget.Material3.Chip.Suggestion.Elevated"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/wetland" />
+            <com.google.android.material.chip.Chip
+                android:id="@+id/cFragmentInformationsTemperate"
+                style="@style/Widget.Material3.Chip.Suggestion.Elevated"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/temperate" />
 
-    </com.google.android.material.chip.ChipGroup>
+            <com.google.android.material.chip.Chip
+                android:id="@+id/cFragmentInformationsWetland"
+                style="@style/Widget.Material3.Chip.Suggestion.Elevated"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/wetland" />
+
+        </com.google.android.material.chip.ChipGroup>
+    </HorizontalScrollView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvFragmentDiscussions"
@@ -65,7 +71,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cgFragmentInformations" />
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
 
     <TextView
         android:id="@+id/tvFragmentDiscussions"
@@ -75,6 +81,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cgFragmentInformations" />
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
